ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserMissingLambdaOpenBrace1/input.ts.stderr
error: Expected ,, got index
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserMissingLambdaOpenBrace1/input.ts:4:17
  |
4 |             var index = 0;
  |                 ^^^^^

error[1005]: Expected a property name
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserMissingLambdaOpenBrace1/input.ts:6:10
  |
6 |         });
  |          ^

error[1005]: Expected '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserMissingLambdaOpenBrace1/input.ts:8:1
  |
8 | }
  | ^

